--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "composer": "^4.1.0",
         "sweetalert2": "^11.7.3"
     }
 }
