--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "owen-it/laravel-auditing": "^13.5",
         "phpmailer/phpmailer": "^6.8",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-activitylog": "^4.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
