--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "owen-it/laravel-auditing": "^13.5",
         "phpmailer/phpmailer": "^6.8",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/laravel-activitylog": "^4.7"
+        "spatie/laravel-activitylog": "^4.7",
+        "symfony/mailer": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
