--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "composer": "^4.1.0",
+        "jspdf": "^2.5.1",
         "magnifier.js": "^1.0.1",
         "sweetalert2": "^11.7.3"
     }
